--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "validator": "^7.0.0"
   }
 }
