--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
@@ -20,6 +21,7 @@
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "validator": "^7.0.0"
   }
 }
